@@ -23,6 +23,7 @@ import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Iterator;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.Locale;
 import java.util.Objects;
@@ -159,14 +160,14 @@ final class UrlParser {
     while (!this.stopMainLoop && this.pointer <= this.input.length()) {
       int c;
       if (this.pointer < this.input.length()) {
-        c = this.input.charAt(this.pointer);
+        c = this.input.codePointAt(this.pointer);
       }
       else {
         c = EOF;
       }
       if (logger.isTraceEnabled()) {
         String cStr = c != EOF ? Character.toString(c) : "EOF";
-        logger.trace("current: %s ptr: %d Buffer: %s State: %s".formatted(cStr, this.pointer, this.buffer, this.state));
+        logger.trace("current: " + cStr + " ptr: " + this.pointer + " Buffer: " + this.buffer + " State: " + this.state);
       }
       this.state.handle(c, url, this);
       this.pointer++;
@@ -177,7 +178,7 @@ final class UrlParser {
   void sanitizeInput(boolean removeC0ControlOrSpace) {
     boolean strip = true;
     for (int i = 0; i < this.input.length(); i++) {
-      char c = this.input.charAt(i);
+      int c = this.input.codePointAt(i);
       boolean isSpaceOrC0 = c == ' ' || isC0Control(c);
       boolean isTabOrNL = c == '\t' || isNewline(c);
       if ((strip && isSpaceOrC0) || isTabOrNL) {
@@ -202,7 +203,7 @@ final class UrlParser {
     }
     if (removeC0ControlOrSpace) {
       for (int i = this.input.length() - 1; i >= 0; i--) {
-        char c = this.input.charAt(i);
+        int c = this.input.codePointAt(i);
         if (c == ' ' || isC0Control(c)) {
           if (validate()) {
             // If input contains any (leading or) trailing C0 control or space, invalid-URL-unit validation error.
@@ -222,7 +223,7 @@ final class UrlParser {
     if (logger.isTraceEnabled()) {
       String c;
       if (this.pointer < this.input.length()) {
-        c = Character.toString(this.input.charAt(this.pointer));
+        c = Character.toString(this.input.codePointAt(this.pointer));
       }
       else {
         c = "EOF";
@@ -234,11 +235,11 @@ final class UrlParser {
     this.state = newState;
   }
 
-  private static List<String> strictSplit(String input, int delimiter) {
+  private static LinkedList<String> strictSplit(String input, int delimiter) {
     // Let position be a position variable for input, initially pointing at the start of input.
     int position = 0;
     // Let tokens be a list of strings, initially empty.
-    List<String> tokens = new ArrayList<>();
+    LinkedList<String> tokens = new LinkedList<>();
     // Let token be the result of collecting a sequence of code points that are not equal to delimiter from input, given position.
     int delIdx = input.indexOf(delimiter, position);
     String token = (delIdx != EOF) ? input.substring(position, delIdx) : input.substring(position);
@@ -263,16 +264,16 @@ final class UrlParser {
 
   private static String domainToAscii(String domain, boolean beStrict) {
     // If beStrict is false, domain is an ASCII string, and strictly splitting domain on U+002E (.) does not produce any item that starts with an ASCII case-insensitive match for "xn--", this step is equivalent to ASCII lowercasing domain.
-    boolean onlyLowerCase = !beStrict;
     if (!beStrict && containsOnlyAscii(domain)) {
       int dotIdx = domain.indexOf('.');
+      boolean onlyLowerCase = true;
       while (dotIdx != -1) {
         if (domain.length() - dotIdx > 4) {
           // ASCII case-insensitive match for "xn--"
-          char ch0 = domain.charAt(dotIdx + 1);
-          char ch1 = domain.charAt(dotIdx + 2);
-          char ch2 = domain.charAt(dotIdx + 3);
-          char ch3 = domain.charAt(dotIdx + 4);
+          int ch0 = domain.codePointAt(dotIdx + 1);
+          int ch1 = domain.codePointAt(dotIdx + 2);
+          int ch2 = domain.codePointAt(dotIdx + 3);
+          int ch3 = domain.codePointAt(dotIdx + 4);
           if ((ch0 == 'x' || ch0 == 'X') &&
                   (ch1 == 'n' || ch1 == 'N') &&
                   ch2 == '-' && ch3 == '_') {
@@ -282,9 +283,9 @@ final class UrlParser {
         }
         dotIdx = domain.indexOf('.', dotIdx + 1);
       }
-    }
-    if (onlyLowerCase) {
-      return domain.toLowerCase(Locale.ENGLISH);
+      if (onlyLowerCase) {
+        return domain.toLowerCase(Locale.ENGLISH);
+      }
     }
     // Let result be the result of running Unicode ToASCII (https://www.unicode.org/reports/tr46/#ToASCII) with domain_name set to domain, UseSTD3ASCIIRules set to beStrict, CheckHyphens set to false, CheckBidi set to true, CheckJoiners set to true, Transitional_Processing set to false, and VerifyDnsLength set to beStrict. [UTS46]
     int flag = 0;
@@ -388,7 +389,7 @@ final class UrlParser {
 
   private static boolean containsOnlyAsciiDigits(CharSequence string) {
     for (int i = 0; i < string.length(); i++) {
-      char ch = string.charAt(i);
+      int ch = codePointAt(string, i);
       if (!isAsciiDigit(ch)) {
         return false;
       }
@@ -396,9 +397,9 @@ final class UrlParser {
     return true;
   }
 
-  private static boolean containsOnlyAscii(CharSequence string) {
+  private static boolean containsOnlyAscii(String string) {
     for (int i = 0; i < string.length(); i++) {
-      char ch = string.charAt(i);
+      int ch = string.codePointAt(i);
       if (!isAsciiCodePoint(ch)) {
         return false;
       }
@@ -477,12 +478,16 @@ final class UrlParser {
     }
   }
 
+  private void append(String s) {
+    this.buffer.append(s);
+  }
+
   private void append(char ch) {
     this.buffer.append(ch);
   }
 
   private void append(int ch) {
-    this.buffer.append((char) ch);
+    this.buffer.appendCodePoint(ch);
   }
 
   private void prepend(String s) {
@@ -496,7 +501,7 @@ final class UrlParser {
   private int remaining(int deltaPos) {
     int pos = this.pointer + deltaPos + 1;
     if (pos < this.input.length()) {
-      return this.input.charAt(pos);
+      return this.input.codePointAt(pos);
     }
     else {
       return EOF;
@@ -512,8 +517,14 @@ final class UrlParser {
     }
   }
 
+  @Nullable
   private String percentEncode(int c, IntPredicate percentEncodeSet) {
-    return percentEncode(Character.toString(c), percentEncodeSet);
+    if (this.encoding == null) {
+      return null;
+    }
+    else {
+      return percentEncode(Character.toString(c), percentEncodeSet);
+    }
   }
 
   private String percentEncode(String input, IntPredicate percentEncodeSet) {
@@ -556,27 +567,27 @@ final class UrlParser {
     int len = b.length();
     switch (len) {
       case 1 -> {
-        char ch0 = b.charAt(0);
+        int ch0 = b.codePointAt(0);
         return ch0 == '.';
       }
       case 2 -> {
-        char ch0 = b.charAt(0);
-        char ch1 = b.charAt(1);
+        int ch0 = b.codePointAt(0);
+        int ch1 = b.codePointAt(1);
         return ch0 == '/' && ch1 == '.';
       }
       case 3 -> {
         //  ASCII case-insensitive match for "%2e".
-        char ch0 = b.charAt(0);
-        char ch1 = b.charAt(1);
-        char ch2 = b.charAt(2);
+        int ch0 = b.codePointAt(0);
+        int ch1 = b.codePointAt(1);
+        int ch2 = b.codePointAt(2);
         return ch0 == '%' && ch1 == '2' && (ch2 == 'e' || ch2 == 'E');
       }
       case 4 -> {
         //  ASCII case-insensitive match for "/%2e".
-        char ch0 = b.charAt(0);
-        char ch1 = b.charAt(1);
-        char ch2 = b.charAt(2);
-        char ch3 = b.charAt(3);
+        int ch0 = b.codePointAt(0);
+        int ch1 = b.codePointAt(1);
+        int ch2 = b.codePointAt(2);
+        int ch3 = b.codePointAt(3);
         return ch0 == '/' && ch1 == '%' && ch2 == '2' && (ch3 == 'e' || ch3 == 'E');
       }
       default -> {
@@ -592,55 +603,55 @@ final class UrlParser {
     int len = b.length();
     switch (len) {
       case 2 -> {
-        char ch0 = b.charAt(0);
-        char ch1 = b.charAt(1);
+        int ch0 = b.codePointAt(0);
+        int ch1 = b.codePointAt(1);
         return ch0 == '.' && ch1 == '.';
       }
       case 3 -> {
-        char ch0 = b.charAt(0);
-        char ch1 = b.charAt(1);
-        char ch2 = b.charAt(2);
+        int ch0 = b.codePointAt(0);
+        int ch1 = b.codePointAt(1);
+        int ch2 = b.codePointAt(2);
         return ch0 == '/' && ch1 == '.' && ch2 == '.';
       }
       case 4 -> {
-        char ch0 = b.charAt(0);
-        char ch1 = b.charAt(1);
-        char ch2 = b.charAt(2);
-        char ch3 = b.charAt(3);
+        int ch0 = b.codePointAt(0);
+        int ch1 = b.codePointAt(1);
+        int ch2 = b.codePointAt(2);
+        int ch3 = b.codePointAt(3);
         // case-insensitive match for ".%2e" or "%2e."
         return (ch0 == '.' && ch1 == '%' && ch2 == '2' && (ch3 == 'e' || ch3 == 'E') ||
                 (ch0 == '%' && ch1 == '2' && (ch2 == 'e' || ch2 == 'E') && ch3 == '.'));
       }
       case 5 -> {
-        char ch0 = b.charAt(0);
-        char ch1 = b.charAt(1);
-        char ch2 = b.charAt(2);
-        char ch3 = b.charAt(3);
-        char ch4 = b.charAt(4);
+        int ch0 = b.codePointAt(0);
+        int ch1 = b.codePointAt(1);
+        int ch2 = b.codePointAt(2);
+        int ch3 = b.codePointAt(3);
+        int ch4 = b.codePointAt(4);
         // case-insensitive match for "/.%2e" or "/%2e."
         return ch0 == '/' &&
                 (ch1 == '.' && ch2 == '%' && ch3 == '2' && (ch4 == 'e' || ch4 == 'E')
                         || (ch1 == '%' && ch2 == '2' && (ch3 == 'e' || ch3 == 'E') && ch4 == '.'));
       }
       case 6 -> {
-        char ch0 = b.charAt(0);
-        char ch1 = b.charAt(1);
-        char ch2 = b.charAt(2);
-        char ch3 = b.charAt(3);
-        char ch4 = b.charAt(4);
-        char ch5 = b.charAt(5);
+        int ch0 = b.codePointAt(0);
+        int ch1 = b.codePointAt(1);
+        int ch2 = b.codePointAt(2);
+        int ch3 = b.codePointAt(3);
+        int ch4 = b.codePointAt(4);
+        int ch5 = b.codePointAt(5);
         // case-insensitive match for "%2e%2e".
         return ch0 == '%' && ch1 == '2' && (ch2 == 'e' || ch2 == 'E')
                 && ch3 == '%' && ch4 == '2' && (ch5 == 'e' || ch5 == 'E');
       }
       case 7 -> {
-        char ch0 = b.charAt(0);
-        char ch1 = b.charAt(1);
-        char ch2 = b.charAt(2);
-        char ch3 = b.charAt(3);
-        char ch4 = b.charAt(4);
-        char ch5 = b.charAt(5);
-        char ch6 = b.charAt(6);
+        int ch0 = b.codePointAt(0);
+        int ch1 = b.codePointAt(1);
+        int ch2 = b.codePointAt(2);
+        int ch3 = b.codePointAt(3);
+        int ch4 = b.codePointAt(4);
+        int ch5 = b.codePointAt(5);
+        int ch6 = b.codePointAt(6);
         // case-insensitive match for "/%2e%2e".
         return ch0 == '/' && ch1 == '%' && ch2 == '2' && (ch3 == 'e' || ch3 == 'E')
                 && ch4 == '%' && ch5 == '2' && (ch6 == 'e' || ch6 == 'E');
@@ -670,7 +681,7 @@ final class UrlParser {
    * its first two code points are a Windows drive letter
    * its length is 2 or its third code point is U+002F (/), U+005C (\), U+003F (?), or U+0023 (#).
    */
-  private static boolean startsWithWindowsDriveLetter(CharSequence input) {
+  private static boolean startsWithWindowsDriveLetter(String input) {
     int len = input.length();
     if (len < 2) {
       return false;
@@ -682,24 +693,36 @@ final class UrlParser {
       return true;
     }
     else {
-      char ch2 = input.charAt(2);
+      int ch2 = input.codePointAt(2);
       return ch2 == '/' || ch2 == '\\' || ch2 == '?' || ch2 == '#';
     }
   }
 
   private static boolean isWindowsDriveLetterInternal(CharSequence s, boolean normalized) {
-    char ch0 = s.charAt(0);
+    int ch0 = codePointAt(s, 0);
     if (!isAsciiAlpha(ch0)) {
       return false;
     }
     else {
-      char ch1 = s.charAt(1);
+      int ch1 = codePointAt(s, 1);
       if (normalized) {
         return ch1 == ':';
       }
       else {
         return ch1 == ':' || ch1 == '|';
       }
+    }
+  }
+
+  private static int codePointAt(CharSequence s, int index) {
+    if (s instanceof String string) {
+      return string.codePointAt(index);
+    }
+    else if (s instanceof StringBuilder builder) {
+      return builder.codePointAt(index);
+    }
+    else {
+      throw new IllegalStateException();
     }
   }
 
@@ -832,7 +855,8 @@ final class UrlParser {
         // If base is null, or base has an opaque path and c is not U+0023 (#), missing-scheme-non-relative-URL
         // validation error, return failure.
         if (p.base == null || p.base.path().isOpaque() && c != '#') {
-          p.failure("The input is missing a scheme, because it does not begin with an ASCII alpha \"%s\", and no base URL was provided.".formatted(c != EOF ? Character.toString(c) : ""));
+          p.failure("The input is missing a scheme, because it does not begin with an ASCII alpha \"" +
+                  (c != EOF ? Character.toString(c) : "") + "\", and no base URL was provided.");
         }
         // Otherwise, if base has an opaque path and c is U+0023 (#), set url’s scheme to base’s scheme, url’s
         // path to base’s path, url’s query to base’s query, url’s fragment to the empty string, and set state to fragment state.
@@ -840,7 +864,7 @@ final class UrlParser {
           url.scheme = p.base.scheme();
           url.path = p.base.path();
           url.query = p.base.query;
-          url.fragment = "";
+          url.fragment = new StringBuilder();
           p.setState(FRAGMENT);
         }
         // Otherwise, if base’s scheme is not "file", set state to relative state and decrease pointer by 1.
@@ -913,20 +937,20 @@ final class UrlParser {
         else {
           // Set url’s username to base’s username, url’s password to base’s password, url’s host to base’s host,
           // url’s port to base’s port, url’s path to a clone of base’s path, and url’s query to base’s query.
-          url.username.replace(0, url.username.length(), p.base.username());
-          url.password.replace(0, url.password.length(), p.base.password());
+          url.username = (p.base.username != null) ? new StringBuilder(p.base.username) : null;
+          url.password = (p.base.password != null) ? new StringBuilder(p.base.password) : null;
           url.host = p.base.host();
           url.port = p.base.port();
           url.path = p.base.path().clone();
           url.query = p.base.query;
           // If c is U+003F (?), then set url’s query to the empty string, and state to query state.
           if (c == '?') {
-            url.query = "";
+            url.query = new StringBuilder();
             p.setState(QUERY);
           }
           // Otherwise, if c is U+0023 (#), set url’s fragment to the empty string and state to fragment state.
           else if (c == '#') {
-            url.fragment = "";
+            url.fragment = new StringBuilder();
             p.setState(FRAGMENT);
           }
           // Otherwise, if c is not the EOF code point:
@@ -964,8 +988,8 @@ final class UrlParser {
         // to base’s host, url’s port to base’s port, state to path state, and then, decrease pointer by 1.
         else {
           Assert.state(p.base != null, "No base URL available");
-          url.username.replace(0, url.username.length(), p.base.username());
-          url.password.replace(0, url.password.length(), p.base.password());
+          url.username = (p.base.username != null) ? new StringBuilder(p.base.username) : null;
+          url.password = (p.base.password != null) ? new StringBuilder(p.base.password) : null;
           url.host = p.base.host();
           url.port = p.base.port();
           p.setState(PATH);
@@ -1037,11 +1061,21 @@ final class UrlParser {
             String encodedCodePoints = p.percentEncode(codePoint, UrlParser::userinfoPercentEncodeSet);
             // If passwordTokenSeen is true, then append encodedCodePoints to url’s password.
             if (p.passwordTokenSeen) {
-              url.password.append(encodedCodePoints);
+              if (encodedCodePoints != null) {
+                url.appendToPassword(encodedCodePoints);
+              }
+              else {
+                url.appendToPassword(codePoint);
+              }
             }
             // Otherwise, append encodedCodePoints to url’s username.
             else {
-              url.username.append(encodedCodePoints);
+              if (encodedCodePoints != null) {
+                url.appendToUsername(encodedCodePoints);
+              }
+              else {
+                url.appendToUsername(codePoint);
+              }
             }
           }
           // Set buffer to the empty string.
@@ -1050,8 +1084,8 @@ final class UrlParser {
         // Otherwise, if one of the following is true:
         // - c is the EOF code point, U+002F (/), U+003F (?), or U+0023 (#)
         // - url is special and c is U+005C (\)
-        else if ((c == EOF || c == '/' || c == '?' || c == '#')
-                || (url.isSpecial() && c == '\\')) {
+        else if ((c == EOF || c == '/' || c == '?' || c == '#') ||
+                (url.isSpecial() && c == '\\')) {
           // If atSignSeen is true and buffer is the empty string, host-missing validation error, return failure.
           if (p.atSignSeen && p.buffer.isEmpty()) {
             p.failure("Missing host.");
@@ -1087,8 +1121,9 @@ final class UrlParser {
             return;
           }
           // Let host be the result of host parsing buffer with url is not special.
+          Host host = Host.parse(p.buffer.toString(), !url.isSpecial(), p);
           // Set url’s host to host, buffer to the empty string, and state to port state.
-          url.host = Host.parse(p.buffer.toString(), !url.isSpecial(), p);
+          url.host = host;
           p.emptyBuffer();
           p.setState(PORT);
         }
@@ -1231,12 +1266,12 @@ final class UrlParser {
           url.query = p.base.query;
           // If c is U+003F (?), then set url’s query to the empty string and state to query state.
           if (c == '?') {
-            url.query = "";
+            url.query = new StringBuilder();
             p.setState(QUERY);
           }
           // Otherwise, if c is U+0023 (#), set url’s fragment to the empty string and state to fragment state.
           else if (c == '#') {
-            url.fragment = "";
+            url.fragment = new StringBuilder();
             p.setState(FRAGMENT);
           }
           // Otherwise, if c is not the EOF code point:
@@ -1373,12 +1408,12 @@ final class UrlParser {
         }
         // Otherwise, if state override is not given and if c is U+003F (?), set url’s query to the empty string and state to query state.
         else if (p.stateOverride == null && c == '?') {
-          url.query = "";
+          url.query = new StringBuilder();
           p.setState(QUERY);
         }
         // Otherwise, if state override is not given and if c is U+0023 (#), set url’s fragment to the empty string and state to fragment state.
         else if (p.stateOverride == null && c == '#') {
-          url.fragment = "";
+          url.fragment = new StringBuilder();
           p.setState(FRAGMENT);
         }
         // Otherwise, if c is not the EOF code point:
@@ -1447,12 +1482,12 @@ final class UrlParser {
           }
           // If c is U+003F (?), then set url’s query to the empty string and state to query state.
           if (c == '?') {
-            url.query = "";
+            url.query = new StringBuilder();
             p.setState(QUERY);
           }
           // If c is U+0023 (#), then set url’s fragment to the empty string and state to fragment state.
           if (c == '#') {
-            url.fragment = "";
+            url.fragment = new StringBuilder();
             p.setState(FRAGMENT);
           }
         }
@@ -1471,14 +1506,19 @@ final class UrlParser {
             // If c is U+0025 (%) and remaining does not start with two ASCII hex digits, invalid-URL-unit validation error.
             else if (c == '%' &&
                     (p.pointer >= p.input.length() - 2 ||
-                            !isAsciiHexDigit(p.input.charAt(p.pointer + 1)) ||
-                            !isAsciiHexDigit(p.input.charAt(p.pointer + 2)))) {
+                            !isAsciiHexDigit(p.input.codePointAt(p.pointer + 1)) ||
+                            !isAsciiHexDigit(p.input.codePointAt(p.pointer + 2)))) {
               p.validationError("Invalid URL Unit: \"" + (char) c + "\"");
             }
           }
           // UTF-8 percent-encode c using the path percent-encode set and append the result to buffer.
           String encoded = p.percentEncode(c, UrlParser::pathPercentEncodeSet);
-          p.buffer.append(encoded);
+          if (encoded != null) {
+            p.append(encoded);
+          }
+          else {
+            p.append(c);
+          }
         }
       }
     },
@@ -1492,12 +1532,12 @@ final class UrlParser {
         }
         // If c is U+003F (?), then set url’s query to the empty string and state to query state.
         if (c == '?') {
-          url.query = "";
+          url.query = new StringBuilder();
           p.setState(QUERY);
         }
         // Otherwise, if c is U+0023 (#), then set url’s fragment to the empty string and state to fragment state.
         else if (c == '#') {
-          url.fragment = "";
+          url.fragment = new StringBuilder();
           p.setState(FRAGMENT);
         }
         // EXTRA: Otherwise, if c is '{', then append c to buffer, set state to url template state.
@@ -1515,15 +1555,20 @@ final class UrlParser {
             // If c is U+0025 (%) and remaining does not start with two ASCII hex digits, invalid-URL-unit validation error.
             else if (c == '%' &&
                     (p.pointer >= p.input.length() - 2 ||
-                            !isAsciiHexDigit(p.input.charAt(p.pointer + 1)) ||
-                            !isAsciiHexDigit(p.input.charAt(p.pointer + 2)))) {
+                            !isAsciiHexDigit(p.input.codePointAt(p.pointer + 1)) ||
+                            !isAsciiHexDigit(p.input.codePointAt(p.pointer + 2)))) {
               p.validationError("Invalid URL Unit: \"" + (char) c + "\"");
             }
           }
           // If c is not the EOF code point, UTF-8 percent-encode c using the C0 control percent-encode set and append the result to url’s path.
           if (c != EOF) {
             String encoded = p.percentEncode(c, UrlParser::c0ControlPercentEncodeSet);
-            url.path.append(encoded);
+            if (encoded != null) {
+              url.path.append(encoded);
+            }
+            else {
+              url.path.append(c);
+            }
           }
         }
       }
@@ -1549,12 +1594,12 @@ final class UrlParser {
           // Percent-encode after encoding, with encoding, buffer, and queryPercentEncodeSet, and append the result to url’s query.
           String encoded = p.percentEncode(p.buffer.toString(), queryPercentEncodeSet);
           Assert.state(url.query != null, "Url's query should not be null");
-          url.query += encoded;
+          url.query.append(encoded);
           // Set buffer to the empty string.
           p.emptyBuffer();
           // If c is U+0023 (#), then set url’s fragment to the empty string and state to fragment state.
           if (c == '#') {
-            url.fragment = "";
+            url.fragment = new StringBuilder();
             p.setState(FRAGMENT);
           }
         }
@@ -1573,8 +1618,8 @@ final class UrlParser {
             // If c is U+0025 (%) and remaining does not start with two ASCII hex digits, invalid-URL-unit validation error.
             else if (c == '%' &&
                     (p.pointer >= p.input.length() - 2 ||
-                            !isAsciiHexDigit(p.input.charAt(p.pointer + 1)) ||
-                            !isAsciiHexDigit(p.input.charAt(p.pointer + 2)))) {
+                            !isAsciiHexDigit(p.input.codePointAt(p.pointer + 1)) ||
+                            !isAsciiHexDigit(p.input.codePointAt(p.pointer + 2)))) {
               p.validationError("Invalid URL Unit: \"" + (char) c + "\"");
             }
           }
@@ -1596,15 +1641,20 @@ final class UrlParser {
             // If c is U+0025 (%) and remaining does not start with two ASCII hex digits, invalid-URL-unit validation error.
             else if (c == '%' &&
                     (p.pointer >= p.input.length() - 2 ||
-                            !isAsciiHexDigit(p.input.charAt(p.pointer + 1)) ||
-                            !isAsciiHexDigit(p.input.charAt(p.pointer + 2)))) {
+                            !isAsciiHexDigit(p.input.codePointAt(p.pointer + 1)) ||
+                            !isAsciiHexDigit(p.input.codePointAt(p.pointer + 2)))) {
               p.validationError("Invalid URL Unit: \"" + (char) c + "\"");
             }
           }
           // UTF-8 percent-encode c using the fragment percent-encode set and append the result to url’s fragment.
           String encoded = p.percentEncode(c, UrlParser::fragmentPercentEncodeSet);
           Assert.state(url.fragment != null, "Url's fragment should not be null");
-          url.fragment += encoded;
+          if (encoded != null) {
+            url.fragment.append(encoded);
+          }
+          else {
+            url.fragment.appendCodePoint(c);
+          }
         }
       }
     },
@@ -1640,9 +1690,11 @@ final class UrlParser {
 
     private String scheme = "";
 
-    private final StringBuilder username = new StringBuilder();
+    @Nullable
+    private StringBuilder username = null;
 
-    private final StringBuilder password = new StringBuilder();
+    @Nullable
+    private StringBuilder password = null;
 
     @Nullable
     private Host host = null;
@@ -1653,10 +1705,10 @@ final class UrlParser {
     private Path path = new PathSegments();
 
     @Nullable
-    private String query = null;
+    private StringBuilder query = null;
 
     @Nullable
-    private String fragment = null;
+    private StringBuilder fragment = null;
 
     public UrlRecord() {
     }
@@ -1672,7 +1724,7 @@ final class UrlParser {
      * A URL includes credentials if its username or password is not the empty string.
      */
     public boolean includesCredentials() {
-      return !this.username.isEmpty() || !this.password.isEmpty();
+      return this.username != null && !this.username.isEmpty() || this.password != null && !this.password.isEmpty();
     }
 
     /**
@@ -1728,14 +1780,56 @@ final class UrlParser {
      * A URL’s username is an ASCII string identifying a username. It is initially the empty string.
      */
     public String username() {
-      return this.username.toString();
+      if (this.username != null) {
+        return this.username.toString();
+      }
+      else {
+        return "";
+      }
+    }
+
+    void appendToUsername(int codePoint) {
+      if (this.username == null) {
+        this.username = new StringBuilder(2);
+      }
+      this.username.appendCodePoint(codePoint);
+    }
+
+    public void appendToUsername(String s) {
+      if (this.username == null) {
+        this.username = new StringBuilder(s);
+      }
+      else {
+        this.username.append(s);
+      }
     }
 
     /**
      * A URL’s password is an ASCII string identifying a password. It is initially the empty string.
      */
     public String password() {
-      return this.password.toString();
+      if (this.password != null) {
+        return this.password.toString();
+      }
+      else {
+        return "";
+      }
+    }
+
+    void appendToPassword(int codePoint) {
+      if (this.password == null) {
+        this.password = new StringBuilder(2);
+      }
+      this.password.appendCodePoint(codePoint);
+    }
+
+    void appendToPassword(String s) {
+      if (this.password == null) {
+        this.password = new StringBuilder(s);
+      }
+      else {
+        this.password.append(s);
+      }
     }
 
     /**
@@ -1824,7 +1918,12 @@ final class UrlParser {
      */
     @Nullable
     public String query() {
-      return this.query;
+      if (this.query == null) {
+        return null;
+      }
+      else {
+        return this.query.toString();
+      }
     }
 
     /**
@@ -1848,7 +1947,12 @@ final class UrlParser {
      */
     @Nullable
     public String fragment() {
-      return this.fragment;
+      if (this.fragment == null) {
+        return null;
+      }
+      else {
+        return this.fragment.toString();
+      }
     }
 
     /**
@@ -1930,15 +2034,15 @@ final class UrlParser {
       if (obj == null || obj.getClass() != this.getClass()) {
         return false;
       }
-      var that = (UrlRecord) obj;
-      return Objects.equals(this.scheme, that.scheme) &&
-              Objects.equals(this.username, that.username) &&
-              Objects.equals(this.password, that.password) &&
-              Objects.equals(this.host, that.host) &&
-              Objects.equals(this.port, that.port) &&
-              Objects.equals(this.path, that.path) &&
-              Objects.equals(this.query, that.query) &&
-              Objects.equals(this.fragment, that.fragment);
+      UrlRecord that = (UrlRecord) obj;
+      return Objects.equals(this.scheme(), that.scheme()) &&
+              Objects.equals(this.username(), that.username()) &&
+              Objects.equals(this.password(), that.password()) &&
+              Objects.equals(this.host(), that.host()) &&
+              Objects.equals(this.port(), that.port()) &&
+              Objects.equals(this.path(), that.path()) &&
+              Objects.equals(this.query(), that.query()) &&
+              Objects.equals(this.fragment(), that.fragment());
     }
 
     @Override
@@ -1974,10 +2078,10 @@ final class UrlParser {
      */
     static Host parse(String input, boolean isOpaque, UrlParser p) {
       // If input starts with U+005B ([), then:
-      if (!input.isEmpty() && input.charAt(0) == '[') {
+      if (!input.isEmpty() && input.codePointAt(0) == '[') {
         int last = input.length() - 1;
         // If input does not end with U+005D (]), IPv6-unclosed validation error, return failure.
-        if (input.charAt(last) != ']') {
+        if (input.codePointAt(last) != ']') {
           throw new InvalidUrlException("IPv6 address is missing the closing \"]\").");
         }
         // Return the result of IPv6 parsing input with its leading U+005B ([) and trailing U+005D (]) removed.
@@ -1997,7 +2101,7 @@ final class UrlParser {
       String asciiDomain = domainToAscii(domain, false);
 
       for (int i = 0; i < asciiDomain.length(); i++) {
-        char ch = asciiDomain.charAt(i);
+        int ch = asciiDomain.codePointAt(i);
         // If asciiDomain contains a forbidden domain code point, domain-invalid-code-point validation error, return failure.
         if (isForbiddenDomain(ch)) {
           throw new InvalidUrlException("Invalid character \"" + ch + "\" in domain \"" + input + "\"");
@@ -2016,37 +2120,29 @@ final class UrlParser {
 
     private static boolean endsInNumber(String input) {
       // Let parts be the result of strictly splitting input on U+002E (.).
-      List<String> parts = strictSplit(input, '.');
-      int lastIdx = parts.size() - 1;
-      if (lastIdx == -1) {
+      LinkedList<String> parts = strictSplit(input, '.');
+      if (parts.isEmpty()) {
         return false;
       }
       // If the last item in parts is the empty string, then:
-      if (parts.get(lastIdx).isEmpty()) {
+      if (parts.getLast().isEmpty()) {
         // If parts’s size is 1, then return false.
         if (parts.size() == 1) {
           return false;
         }
         // Remove the last item from parts.
-        parts.remove(lastIdx);
+        parts.removeLast();
       }
       // Let last be the last item in parts.
-      String last = parts.get(parts.size() - 1);
+      String last = parts.getLast();
       // If last is non-empty and contains only ASCII digits, then return true.
       if (!last.isEmpty() && containsOnlyAsciiDigits(last)) {
         return true;
       }
       // If parsing last as an IPv4 number does not return failure, then return true.
-      try {
-        Ipv4Address.parseIpv4Number(last);
-        return true;
-      }
-      catch (InvalidUrlException ignored) {
-      }
-      // Return false.
-      return false;
+      ParseIpv4NumberResult result = Ipv4Address.parseIpv4Number(last);
+      return result != ParseIpv4NumberFailure.INSTANCE;
     }
-
   }
 
   /**
@@ -2106,6 +2202,10 @@ final class UrlParser {
       }
     }
 
+    public IpAddress address() {
+      return this.address;
+    }
+
     @Override
     public boolean equals(Object obj) {
       if (obj == this) {
@@ -2144,7 +2244,7 @@ final class UrlParser {
      */
     public static OpaqueHost parse(String input, UrlParser p) {
       for (int i = 0; i < input.length(); i++) {
-        char ch = input.charAt(i);
+        int ch = input.codePointAt(i);
         // If input contains a forbidden host code point, host-invalid-code-point validation error, return failure.
         if (isForbiddenHost(ch)) {
           throw new InvalidUrlException("An opaque host contains a forbidden host code point.");
@@ -2154,7 +2254,7 @@ final class UrlParser {
           p.validationError("Code point \"" + ch + "\" is not a URL unit.");
         }
         //If input contains a U+0025 (%) and the two code points following it are not ASCII hex digits, invalid-URL-unit validation error.
-        if (p.validate() && ch == '%' && (input.length() - i < 2 || !isAsciiDigit(input.charAt(i + 1)) || !isAsciiDigit(input.charAt(i + 2)))) {
+        if (p.validate() && ch == '%' && (input.length() - i < 2 || !isAsciiDigit(input.codePointAt(i + 1)) || !isAsciiDigit(input.codePointAt(i + 2)))) {
           p.validationError("Code point \"" + ch + "\" is not a URL unit.");
         }
       }
@@ -2275,11 +2375,18 @@ final class UrlParser {
         String part = parts.get(i);
         // Let result be the result of parsing part.
         ParseIpv4NumberResult result = parseIpv4Number(part);
-        if (p.validate() && result.validationError()) {
-          p.validationError("The IPv4 address contains numbers expressed using hexadecimal or octal digits.");
+        // If result is failure, IPv4-non-numeric-part validation error, return failure.
+        if (result == ParseIpv4NumberFailure.INSTANCE) {
+          p.failure("An IPv4 address part is not numeric.");
         }
-        // Append result to numbers.
-        numbers.add(result.number());
+        else {
+          ParseIpv4NumberSuccess success = (ParseIpv4NumberSuccess) result;
+          if (p.validate() && success.validationError()) {
+            p.validationError("The IPv4 address contains numbers expressed using hexadecimal or octal digits.");
+          }
+          // Append result to numbers.
+          numbers.add(success.number());
+        }
       }
       for (Iterator<Integer> iterator = numbers.iterator(); iterator.hasNext(); ) {
         Integer number = iterator.next();
@@ -2297,7 +2404,7 @@ final class UrlParser {
           // If the last item in numbers is greater than or equal to 256^(5 − numbers’s size), then return failure.
           double limit = Math.pow(256, (5 - numbers.size()));
           if (number >= limit) {
-            throw new InvalidUrlException("IPv4 address part %d exceeds %s.'".formatted(number, limit));
+            throw new InvalidUrlException("IPv4 address part " + number + " exceeds " + limit + ".'");
           }
         }
       }
@@ -2325,7 +2432,7 @@ final class UrlParser {
     private static ParseIpv4NumberResult parseIpv4Number(String input) {
       // If input is the empty string, then return failure.
       if (input.isEmpty()) {
-        throw new InvalidUrlException("Input is empty");
+        return ParseIpv4NumberFailure.INSTANCE;
       }
       // Let validationError be false.
       boolean validationError = false;
@@ -2334,8 +2441,8 @@ final class UrlParser {
       int len = input.length();
       // If input contains at least two code points and the first two code points are either "0X" or "0x", then:
       if (len >= 2) {
-        char ch0 = input.charAt(0);
-        char ch1 = input.charAt(1);
+        int ch0 = input.codePointAt(0);
+        int ch1 = input.codePointAt(1);
         if (ch0 == '0' && (ch1 == 'X' || ch1 == 'x')) {
           // Set validationError to true.
           validationError = true;
@@ -2356,16 +2463,24 @@ final class UrlParser {
       }
       // If input is the empty string, then return (0, true).
       if (input.isEmpty()) {
-        return new ParseIpv4NumberResult(0, true);
+        return new ParseIpv4NumberSuccess(0, true);
+      }
+      // If input contains a code point that is not a radix-R digit, then return failure.
+      for (int i = 0; i < input.length(); i++) {
+        int c = input.codePointAt(i);
+        int digit = Character.digit(c, r);
+        if (digit == -1) {
+          return ParseIpv4NumberFailure.INSTANCE;
+        }
       }
       try {
         // Let output be the mathematical integer value that is represented by input in radix-R notation, using ASCII hex digits for digits with values 0 through 15.
         int output = Integer.parseInt(input, r);
         // Return (output, validationError).
-        return new ParseIpv4NumberResult(output, validationError);
+        return new ParseIpv4NumberSuccess(output, validationError);
       }
       catch (NumberFormatException ex) {
-        throw new InvalidUrlException("Could not parse \"%s\" as integer: %s".formatted(input, ex.getMessage()), ex);
+        return ParseIpv4NumberFailure.INSTANCE;
       }
     }
 
@@ -2418,11 +2533,11 @@ final class UrlParser {
       // Let pointer be a pointer for input.
       int pointer = 0;
       int inputLength = input.length();
-      int c = (inputLength > 0) ? input.charAt(0) : EOF;
+      int c = (inputLength > 0) ? input.codePointAt(0) : EOF;
       // If c is U+003A (:), then:
       if (c == ':') {
         // If remaining does not start with U+003A (:), IPv6-invalid-compression validation error, return failure.
-        if (inputLength > 1 && input.charAt(1) != ':') {
+        if (inputLength > 1 && input.codePointAt(1) != ':') {
           throw new InvalidUrlException("IPv6 address begins with improper compression.");
         }
         // Increase pointer by 2.
@@ -2431,7 +2546,7 @@ final class UrlParser {
         pieceIndex++;
         compress = pieceIndex;
       }
-      c = (pointer < inputLength) ? input.charAt(pointer) : EOF;
+      c = (pointer < inputLength) ? input.codePointAt(pointer) : EOF;
       // While c is not the EOF code point:
       while (c != EOF) {
         // If pieceIndex is 8, IPv6-too-many-pieces validation error, return failure.
@@ -2448,7 +2563,7 @@ final class UrlParser {
           pointer++;
           pieceIndex++;
           compress = pieceIndex;
-          c = (pointer < inputLength) ? input.charAt(pointer) : EOF;
+          c = (pointer < inputLength) ? input.codePointAt(pointer) : EOF;
           continue;
         }
         // Let value and length be 0.
@@ -2460,7 +2575,7 @@ final class UrlParser {
           value = (value * 0x10) + cHex;
           pointer++;
           length++;
-          c = (pointer < inputLength) ? input.charAt(pointer) : EOF;
+          c = (pointer < inputLength) ? input.codePointAt(pointer) : EOF;
         }
         // If c is U+002E (.), then:
         if (c == '.') {
@@ -2476,7 +2591,7 @@ final class UrlParser {
           }
           // Let numbersSeen be 0.
           int numbersSeen = 0;
-          c = (pointer < inputLength) ? input.charAt(pointer) : EOF;
+          c = (pointer < inputLength) ? input.codePointAt(pointer) : EOF;
           // While c is not the EOF code point:
           while (c != EOF) {
             // Let ipv4Piece be null.
@@ -2486,7 +2601,7 @@ final class UrlParser {
               // If c is a U+002E (.) and numbersSeen is less than 4, then increase pointer by 1.
               if (c == '.' && numbersSeen < 4) {
                 pointer++;
-                c = (pointer < inputLength) ? input.charAt(pointer) : EOF;
+                c = (pointer < inputLength) ? input.codePointAt(pointer) : EOF;
               }
               // Otherwise, IPv4-in-IPv6-invalid-code-point validation error, return failure.
               else {
@@ -2520,7 +2635,7 @@ final class UrlParser {
               }
               // Increase pointer by 1.
               pointer++;
-              c = (pointer < inputLength) ? input.charAt(pointer) : EOF;
+              c = (pointer < inputLength) ? input.codePointAt(pointer) : EOF;
             }
             // Set address[pieceIndex] to address[pieceIndex] × 0x100 + ipv4Piece.
             address[pieceIndex] = address[pieceIndex] * 0x100 + (ipv4Piece != null ? ipv4Piece : 0);
@@ -2530,7 +2645,7 @@ final class UrlParser {
             if (numbersSeen == 2 || numbersSeen == 4) {
               pieceIndex++;
             }
-            c = (pointer < inputLength) ? input.charAt(pointer) : EOF;
+            c = (pointer < inputLength) ? input.codePointAt(pointer) : EOF;
           }
           // If numbersSeen is not 4, IPv4-in-IPv6-too-few-parts validation error, return failure.
           if (numbersSeen != 4) {
@@ -2543,7 +2658,7 @@ final class UrlParser {
         else if (c == ':') {
           // Increase pointer by 1.
           pointer++;
-          c = (pointer < inputLength) ? input.charAt(pointer) : EOF;
+          c = (pointer < inputLength) ? input.codePointAt(pointer) : EOF;
           // If c is the EOF code point, IPv6-invalid-code-point validation error, return failure.
           if (c == EOF) {
             throw new InvalidUrlException("IPv6 address unexpectedly ends.");
@@ -2551,7 +2666,7 @@ final class UrlParser {
         }
         // Otherwise, if c is not the EOF code point, IPv6-invalid-code-point validation error, return failure.
         else if (c != EOF) {
-          throw new InvalidUrlException("IPv6 address contains \"%s\", which is neither an ASCII hex digit nor a ':'.".formatted(Character.toString(c)));
+          throw new InvalidUrlException("IPv6 address contains \"" + Character.toString(c) + "\", which is neither an ASCII hex digit nor a ':'.");
         }
         // Set address[pieceIndex] to value.
         address[pieceIndex] = value;
@@ -2717,6 +2832,8 @@ final class UrlParser {
 
   sealed interface Path permits PathSegment, PathSegments {
 
+    void append(int codePoint);
+
     void append(String s);
 
     boolean isEmpty();
@@ -2732,28 +2849,48 @@ final class UrlParser {
 
   static final class PathSegment implements Path {
 
-    private final StringBuilder segment;
+    @Nullable
+    private StringBuilder builder = null;
 
     @Nullable
-    String segmentString;
+    String segment;
 
     PathSegment(String segment) {
-      this.segment = new StringBuilder(segment);
+      this.segment = segment;
+    }
+
+    PathSegment(int codePoint) {
+      append(codePoint);
     }
 
     public String segment() {
-      String result = this.segmentString;
+      String result = this.segment;
       if (result == null) {
-        result = this.segment.toString();
-        this.segmentString = result;
+        Assert.state(this.builder != null, "String nor StringBuilder available");
+        result = this.builder.toString();
+        this.segment = result;
       }
       return result;
     }
 
     @Override
+    public void append(int codePoint) {
+      this.segment = null;
+      if (this.builder == null) {
+        this.builder = new StringBuilder(2);
+      }
+      this.builder.appendCodePoint(codePoint);
+    }
+
+    @Override
     public void append(String s) {
-      this.segmentString = null;
-      this.segment.append(s);
+      this.segment = null;
+      if (this.builder == null) {
+        this.builder = new StringBuilder(s);
+      }
+      else {
+        this.builder.append(s);
+      }
     }
 
     @Override
@@ -2767,7 +2904,13 @@ final class UrlParser {
 
     @Override
     public boolean isEmpty() {
-      return this.segment.isEmpty();
+      if (this.segment != null) {
+        return this.segment.isEmpty();
+      }
+      else {
+        Assert.state(this.builder != null, "String nor StringBuilder available");
+        return this.builder.isEmpty();
+      }
     }
 
     @Override
@@ -2822,6 +2965,11 @@ final class UrlParser {
     }
 
     @Override
+    public void append(int codePoint) {
+      this.segments.add(new PathSegment(codePoint));
+    }
+
+    @Override
     public void append(String segment) {
       this.segments.add(new PathSegment(segment));
     }
@@ -2842,7 +2990,9 @@ final class UrlParser {
     @Override
     public void shorten(String scheme) {
       int size = size();
-      if ("file".equals(scheme) && size == 1 && isWindowsDriveLetter(get(0), true)) {
+      if ("file".equals(scheme) &&
+              size == 1 &&
+              isWindowsDriveLetter(get(0), true)) {
         return;
       }
       if (!isEmpty()) {
@@ -2899,7 +3049,20 @@ final class UrlParser {
 
   }
 
-  private record ParseIpv4NumberResult(int number, boolean validationError) {
+  private sealed interface ParseIpv4NumberResult permits ParseIpv4NumberFailure, ParseIpv4NumberSuccess {
+
+  }
+
+  private record ParseIpv4NumberSuccess(int number, boolean validationError) implements ParseIpv4NumberResult {
+
+  }
+
+  private static final class ParseIpv4NumberFailure implements ParseIpv4NumberResult {
+
+    public static final ParseIpv4NumberFailure INSTANCE = new ParseIpv4NumberFailure();
+
+    private ParseIpv4NumberFailure() {
+    }
 
   }
 
